fix: content scrolling on mobile

--- a/app/layout.module.css
+++ b/app/layout.module.css
@@ -6,6 +6,12 @@
   position: relative;
 }
 
+@media (max-width: 768px) {
+  .main {
+    height: calc(100% - 4.5rem);
+  }
+}
+
 .content {
   background-color: var(--main-background);
   color: var(--white);
